fix: setup proper gaps and paddings

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -72,12 +72,14 @@ button.cancel {
 
 .modal {
   display: flex;
-  padding: 8px;
+  padding: 12px 16px;
+  gap: 12px;
 }
 
 .right-container {
   display: flex;
   flex-direction: column;
+  gap: 8px;
 }
 
 .header-container {
